src/less/nault-theme.less
/* ... */
.nano-address-actions {
	margin-bottom: 3px !important;
	padding-left: 10px;
}

.nano-address-clickable-hover-styles() {
	border-color: @global-primary-background;
}

.nano-address-breakable {
	line-break: anywhere;
}

.account-container .account-index {
	color: #676686;
	display: inline-block;
	font-size: 13px;
	margin-right: 7px;
}

.account-container .account-index span {
	color: #AAA;
	font-size: 15px;
	vertical-align: -1px;
	margin-right: 1px;
}

.account-container:hover .account-index {
	color: #4A90E2;
}

.account-container:hover .account-index span {
	color: #A2CBFA;
}

.account-container:hover {
	.account-label {
		.account-label-hover-styles();
	}

	.nano-address-clickable {
		.nano-address-clickable-hover-styles();
	}
}

.rep-container:hover {
	.account-label.rep {
		border: 2px solid @rep-label-color;
		background: transparent;
		color: @rep-label-color;
	}
}

.wallet-notification {
	border: 4px solid rgba(83, 83, 83, 0.05);
}

.nano-address-prefix {
	color: #4A90E2;
}
.nano-address-middle {
	min-width: 1.4em;

	&.is-off {
		letter-spacing: -4px;
		margin-right: 4px;
	}
}
.nano-address-suffix {
	color: #D5AF4E;
}

.natricon-placeholder > img {
	opacity: 0.2;
}

@media (max-width: 939px) {
	.hide-on-small-viewports {
		display: none;
	}

	.notification-container {
		top: 60px !important;
	}

	.uk-tooltip {
		display: none !important;
	}
}

@media (min-width: 940px) {
	.only-on-small-viewports {
		display: none;
	}
}

// Menu modal
.modal-position-bottom[style*="display: block;"] {
	display: flex !important;
	flex-direction: column;
	justify-content: flex-end;
}

.uk-modal {
	.transaction {
		padding-left: 0 !important;
		padding-right: 0 !important;

		&:not(.identicons-enabled) {
			@media (max-width: 443px) {
				.nano-address-prefix .nano-prefix {
					display: none;
				}
			}

			@media (max-width: 413px) {
				.nano-address-suffix {
					display: none;
				}
			}
		}

		&.identicons-enabled {
			// identicons take up extra 10px

			@media (max-width: 453px) {
				.nano-address-prefix .nano-prefix {
					display: none;
				}
			}

			@media (max-width: 423px) {
				.nano-address-suffix {
					display: none;
				}
			}
		}
	}

	.menu-header {
		margin-bottom: -4px;
		user-select: none;
	}

	.menu-option {
		padding: 10px 8px;
		margin: 10px -8px 0 -8px;
		font-size: 17px;
		font-family: 'Montserrat', Arial, Helvetica, sans-serif;
		cursor: pointer;
		border-radius: 2px;
		user-select: none;
		background: rgba(0, 0, 0, 0);
		transition: background-color 100ms ease-in-out;

		&:hover, &:active {
			background: rgba(0, 0, 0, 0.2);
		}

		> .icon {
			margin-right: 15px;
			position: relative;

			&.icon-leave {
				margin-right: 13px;
				vertical-align: 1px;
			}

			&.icon-copy {
				margin-top: -3px;
				margin-bottom: -3px;
				margin-left: -2px;
				margin-right: 13px;
			}

			> .icon-inner {
				position: absolute;
				left: 50%;
				top: 50%;
				transform: translate(-50%, -50%);

				&.icon-user {
					padding-right: 1px;

					circle, path {
						stroke-width: 2;
					}
				}
			}
		}
	}
}

// Mobile actions
.mobile-actions-fixed {
	display: flex;
	align-items: flex-end;
	position: fixed;
	bottom: 0;
	left: 11px;
	width: calc(100% - 22px);
	height: 160px;
	background: linear-gradient( 0deg, rgba(255, 255, 255, 1) 50%, rgba(255, 255, 255, 0) ) 0%;
	pointer-events: none;

	> .actions-area {
		display: flex;
		width: 100%;
		height: 66px;
		padding: 40px 0 20px 0;
		pointer-events: all;

		> button {
			flex: 1;
			border: 0;
			margin: 8px 12px;
			background: #4E91E0;
			border-radius: 30px;
			color: #FFF;
			font-family: 'Montserrat', Arial, Helvetica, sans-serif;
			font-size: 17px;
			font-weight: 400;
			text-transform: uppercase;
			cursor: pointer;
			transition: background-color 100ms ease-in-out;

			&:hover, &:active {
				background: #3883DC;
			}
		}
	}
}

.nav-expanded .mobile-actions-fixed, .nav-animating .mobile-actions-fixed {
	display: none;
}

@media (min-width: 940px) {
	.mobile-actions-fixed {
		display: none;
	}
}

// Unlock Wallet modal
.password-input.uk-form-danger {
	border-color: #F79743;
	background: #FFF9F4;
}

.password-input.uk-form-danger, .password-input.uk-form-danger::placeholder {
	color: #F79743;
}

// Account Snippet (used for operations to/from)
.account-snippet-container {
	margin: -10px;
	display: flex;
	flex-wrap: wrap;
}

.account-snippet {
	flex: 1;
	margin: 10px;

	max-width: calc(50% - 20px);

	.force-one-per-row() {
		max-width: unset;
		flex-basis: 100%;
	}
	@media (max-width: 849px) {
		.force-one-per-row();
	}
	@media (min-width: 940px) and (max-width: 1200px) {
		.force-one-per-row();
	}

	> .uk-card {
		> .uk-card-header, > .uk-card-body {
			padding: 10px 15px;
		}

		min-width: 235px;
		&.identicons-enabled {
			min-width: 305px;
		}
	}

	.snippet-caption {
		margin-bottom: 15px;
	}

	.account-container {
		display: flex;
		flex-direction: column;
		align-items: flex-end;

		.nano-identicon {
			display: inline-block;
			width: 54px;
			height: 54px;
			margin-right: 20px;
			margin-left: 1px;

			.canvas-container canvas {
				border-radius: 3px;
			}
		}

		.identicon-address-book-row {
			width: 100%;
			display: flex;
			align-items: center;
			min-height: 55px;
		}

		.account-label {
			padding: 15px 12px;
		}

		.nano-address-clickable {
			margin-top: 10px;
		}
	}

	.snippet-address-actions {
		margin-bottom: 5px !important;
		flex-shrink: 0;
		padding-left: 10px;
	}

	@media (max-width: 349px) {
		.nano-address-clickable > .uk-flex {
			flex-wrap: wrap;
			width: 125px;

			.nano-address-middle {
				width: 0;
			}

			.nano-address-suffix {
				margin-left: 69px; // Nice
			}
		}
	}
}
/* ... */

